--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
+    "dompurify": "^3.3.1",
+    "marked": "^17.0.1",
     "vue": "^3.5.24"
   },
   "devDependencies": {
