--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
     "dompurify": "^3.3.1",
+    "lunr": "^2.3.9",
     "marked": "^17.0.1",
-    "vue": "^3.5.24"
+    "pinia": "^3.0.4",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
