Refactor app initialization for ViteSSG, update routing structure, and enhance client-side handling for localStorage and DOM manipulation

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:lattice": "node scripts/build-lattice.js",
     "dev": "npm run build:lattice && vite --host --port 5555",
-    "build": "npm run build:lattice && vite build",
+    "build": "npm run build:lattice && vite-ssg build",
+    "build:spa": "npm run build:lattice && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "sass": "^1.97.1",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-ssg": "^28.2.2"
   }
 }
